# open-lease

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
catalog/: models.toml
docs/: adding-a-provider.md  architecture.md  configuration.md  phase-4-swamp.md  plan-ux-improvements.md  ux-feedback.md
requirements/: gpu-orchestrator-requirements.md
scripts/: mock_mcp_server.py
src/gpu_orchestrator/: __init__.py  config.py  errors.py  events.py  logging.py  models.py  naming.py  store.py
src/gpu_orchestrator/api/: __init__.py  app.py
src/gpu_orchestrator/cli/: __init__.py  main.py  process.py  render.py
src/gpu_orchestrator/core/: __init__.py  batch.py  catalog.py  costs.py  daemon.py  health.py  orchestrator.py  outcomes.py  reconciler.py  usage.py
src/gpu_orchestrator/mcp/: __init__.py  server.py
src/gpu_orchestrator/providers/: __init__.py  base.py  mock.py  runpod.py
src/gpu_orchestrator/proxy/: __init__.py  openai_proxy.py
src/gpu_orchestrator/runtimes/: __init__.py  base.py  vllm.py
tests/api/: test_api.py
tests/cli/: test_cli.py
tests/contract/: test_provider_contract.py
tests/fixtures/: catalog.py  deployments.py  events.py
tests/mcp/: test_mcp.py
tests/unit/: test_batch.py  test_catalog.py  test_config.py  test_costs.py  test_daemon.py  test_events.py  test_health.py  test_logging.py  test_mock_provider.py  test_models.py  test_orchestrator.py  test_process.py  test_proxy.py  test_reconciler.py  test_reconciler_pure.py  test_render.py  test_store.py  test_usage.py  test_vllm_runtime.py  test_volumes.py
