[project]
name = "open-lease"
version = "0.2.0"
description = "Make GPU infrastructure programmable: provision GPUs, deploy open-source LLMs, serve OpenAI-compatible inference."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Fahad Baig" }]
keywords = ["gpu", "llm", "vllm", "runpod", "inference", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
# Base install = engine + CLI + the OpenAI proxy (`gpu proxy`, starlette/uvicorn). The heavier
# server frameworks for the REST API and MCP server are optional extras.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://openlease.canonicalresearch.dev"
Documentation = "https://openlease.canonicalresearch.dev/docs"
Repository = "https://github.com/mfbaig35r/open-lease"
Issues = "https://github.com/mfbaig35r/open-lease/issues"

[project.optional-dependencies]
api = ["fastapi>=0.110"]        # `gpu serve` (REST API)
mcp = ["fastmcp>=2.0"]          # `gpu-mcp` (MCP server)
all = ["fastapi>=0.110", "fastmcp>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "fastapi>=0.110", "fastmcp>=2.0"]

[project.scripts]
gpu = "gpu_orchestrator.cli.main:app"
gpu-mcp = "gpu_orchestrator.mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_orchestrator"]

# The catalog lives at the repo root (data, not code, spec §5). Ship a copy inside the package so an
# installed wheel can load it; default_catalog_path() falls back to this location.
[tool.hatch.build.targets.wheel.force-include]
"catalog/models.toml" = "gpu_orchestrator/data/models.toml"

[tool.hatch.build.targets.sdist]
include = ["src", "catalog", "requirements", "docs", "README.md", "LICENSE", "CLAUDE.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer requires typer.Option()/Argument() calls in argument defaults; B008 is that pattern.
"src/gpu_orchestrator/cli/main.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
